tests/snapshots/snippets_200x60.snap
---
source: tests/redimensionado/arnes.rs
---
┌ MAGI · SNIPPETS · 3 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ▸ actualizar paquetes  web            → 3 hosts  CRÍTICO                                                                                                       │
│                                         espacio en disco     hetzner-01 +1  → 2 hosts                                                                                                                │
│                                         reiniciar nginx      web            → 3 hosts  CRÍTICO                                                                                                       │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                       ┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐                                       │
│                                       │  sudo apt update && sudo apt -y upgrade                                                                              │                                       │
│                                       │                                                                                                                      │                                       │
│                                       │  Destinos      etiqueta «web»: hetzner-01, hetzner-02, vps-openclaw                                                  │                                       │
│                                       │  Variables     ninguna                                                                                               │                                       │
│                                       │  Confirmación  requiere deliberación MAGI (crítico, 3 hosts)                                                         │                                       │
│                                       │  Timeout 60 s · usado 0 veces · última nunca                                                                         │                                       │
│                                       │                                                                                                                      │                                       │
│                                       └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 ↵ ejecutar  a en todos  p en pestaña  n e x nuevo · editar · borrar  / buscar  t resultados  ? ayuda
