tests/snapshots/snippets_40x12.snap
---
source: tests/redimensionado/arnes.rs
---
┌──────────────────────────────────────┐
│                                      │
│                                      │
│                                      │
│      ✕ ventana demasiado pequeña     │
│         40×12 · mínimo 50×12         │
│       (Snippets necesita 50×12)      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
