tests/snapshots/snippets_90x18.snap
---
source: tests/redimensionado/arnes.rs
---
┌ MAGI · SNIPPETS · 3 ───────────────────────────────────────────────────────────────────┐
│▸ actualizar paquetes  web            → 3 hosts  CRÍTICO                                │
│  espacio en disco     hetzner-01 +1  → 2 hosts                                         │
│  reiniciar nginx      web            → 3 hosts  CRÍTICO                                │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└ i detalle ─────────────────────────────────────────────────────────────────────────────┘
 ↵ ejecutar  a en todos  p en pestaña  / buscar  t resultados  i detalle  ? más
