tests/snapshots/transferencias_40x12.snap
---
source: tests/redimensionado/arnes.rs
---
┌──────────────────────────────────────┐
│                                      │
│                                      │
│                                      │
│      ✕ ventana demasiado pequeña     │
│         40×12 · mínimo 50×12         │
│    (Transferencias necesita 50×12)   │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
