tests/snapshots/transferencias_80x16.snap
---
source: tests/redimensionado/arnes.rs
---
┌ TRANSFERENCIAS · 1 en curso · 2 en cola ─────────────────────────────────────┐
│    ESTADO    DIRECCIÓN ORIGEN → DESTINO                     PROGRESO         │
│▸ ◐ en curso  ↑ subida  main.py → hetzner-01:main.py          78 %  1.1 MB    │
│  ○ en cola   ↑ subida  static → hetzner-01:static             0 %  0 B       │
│  ○ en cola   ↓ bajada  access.log → hetzner-01:access.log     0 %  0 B       │
│  ● hecha     ↑ subida  config.yaml → hetzner-01:config.yaml 100 %  2 kB      │
│  ✕ error     ↓ bajada  backup.tgz → hetzner-02:backup.tgz   permiso denegado │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└ 5 ──────────────────────────────────────────────────────────────── ↵ detalle ┘
 ↓↑ mover  x cancelar  C limpiar  ↵ detalle  q volver  ? ayuda
